enhance editor panel, tool bar #11, remove nulls